@@ -131,6 +131,7 @@ struct _AgsSoundcardInterface
   
   void* (*get_buffer)(AgsSoundcard *soundcard);
   void* (*get_next_buffer)(AgsSoundcard *soundcard);  
+  void* (*get_prev_buffer)(AgsSoundcard *soundcard);  
 
   void (*set_bpm)(AgsSoundcard *soundcard,
 		  gdouble bpm);
@@ -229,6 +230,7 @@ void ags_soundcard_offset_changed(AgsSoundcard *soundcard,
 
 void* ags_soundcard_get_buffer(AgsSoundcard *soundcard);
 void* ags_soundcard_get_next_buffer(AgsSoundcard *soundcard);
+void* ags_soundcard_get_prev_buffer(AgsSoundcard *soundcard);
 
 void ags_soundcard_set_bpm(AgsSoundcard *soundcard,
 			   gdouble bpm);
