@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Terminal=false
 Exec=gsequencer
-Icon=@datadir@/gsequencer/icons/jumper.png
+Icon=@datadir@/gsequencer/icons/ags.png
 Name=Advanced Gtk+ Sequencer
-Categories=AudioVideo;Audio;GTK;
+Categories=AudioVideo;Audio;Sequencer;
 Keywords=audio;sequencer;notation;editor;midi;synth;mixing;effects;
